--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </script>
   </head>
   <body>
-	    <h2>مركز العمالقة للحواسيب</h2>
+	    <h2>***مركز العمالقة للحواسيب***</h2>
 		
 			    <h2>الهوست الخاص بي مركز العمالقة لتعديل البلاستيشن4 </h2>
 
