--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     </div>
     <pre id="console"></pre>
     <footer>
-    مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
+    
+	   ☺️ أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى ان تضع اعجاب لنا 
+		مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
     </footer>
   </body>
   <script>
