--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       }
       footer {
         margin-top: 30px;
-        font-size: 30px;
+        font-size: 50px;
         color:#cccccc;
       }
     </style>
@@ -61,7 +61,6 @@
 			    <h2>الهوست الخاص بي مركز العمالقة لتعديل البلاستيشن4 </h2>
 
 		
-			    <h2>أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة قائمة الالعاب المتوفرة لدينا</h2>
 
 		
 
@@ -77,7 +76,7 @@
     <pre id="console"></pre>
     <footer>
     
-	   ☺️ أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى ان تضع اعجاب لنا 
+	  ദ്ദി( • ᴗ < )  أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى ان تضع اعجاب لنا 
 		مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
     </footer>
   </body>
