--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       }
       footer {
         margin-top: 30px;
-        font-size: 50px;
+        font-size: 40px;
         color:#cccccc;
       }
     </style>
@@ -76,7 +76,7 @@
     <pre id="console"></pre>
     <footer>
     
-	  ദ്ദി( • ᴗ < )  أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى ان تضع اعجاب لنا 
+	  ˆᵕˆ أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى ان تضع اعجاب لنا 
 		مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
     </footer>
   </body>
