--- a/cache.html
+++ b/cache.html
@@ -1,7 +1,7 @@
 <html manifest="psfree_lapse.cache">
   <head>
     <meta charset="utf-8">
-    <title>PS4 Jailbreak</title>
+    <title>تحميل كاش هوست مركز العمالقة</title>
     <style>
       body {
         background:url('icon0.png');
