--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <pre id="console"></pre>
     <footer>
     
-	  ˆᵕˆ أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى ان تضع اعجاب لنا 
+	 أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى أن تضع اعجاب لنا 
 		مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
     </footer>
   </body>
