--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         color: #cccccc;
         font-family: "Segoe UI", Tahoma, sans-serif;
         text-align: center;
+	    font-size: 40px;
+  
       }
       h2 {
         margin-bottom: 20px;
