--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       footer {
         margin-top: 30px;
         font-size: 33px;
-        color:#cccccc;
+        color:#FFFFFF;
       }
     </style>
     <script>
@@ -77,12 +77,9 @@
     </div>
     <pre id="console"></pre>
     <footer>
-
-		
     
 	    أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى أن تضع اعجاب لنا 
 
-		
 		مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
     </footer>
   </body>
