--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <pre id="console"></pre>
     <footer>
     
-	    أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى أن تضع اعجاب لنا 
+	    أمسح الباركود الظاهر في زاوية الشاشة لمشاهدة صفحتنا على الفيس بوك ومشاهدة قائمة الالعاب لدينا لاتنسى أن تضع أعجاب لنا 
 
 		مركز العمالقة للحواسيب دمشق كفرسوسة شارع الجمالة للتواصل 0938865144محمد\\\0994555846أحمد
     </footer>
