--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <style>
       body {
         background:url('icon0.png');
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background- fixed;
         background-color: #252526;
         color: #cccccc;
         font-family: "Segoe UI", Tahoma, sans-serif;
